[gd_scene load_steps=12 format=3 uid="uid://dlkdfhpco6jjk"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_jw6sh"]
[ext_resource type="PackedScene" uid="uid://cosawlifrhcf3" path="res://scenes/elements/cloud_scene.tscn" id="2_80ei6"]
[ext_resource type="PackedScene" uid="uid://bsko2g7rl06b2" path="res://scenes/elements/bird_scene.tscn" id="3_e3ykb"]
[ext_resource type="FontFile" uid="uid://d14s525nrgj5o" path="res://assets/fonts/Playon-reg.ttf" id="4_kct05"]
[ext_resource type="PackedScene" uid="uid://61ihymdab77s" path="res://scenes/ui/transition_scene.tscn" id="5_1leyw"]
[ext_resource type="PackedScene" uid="uid://b5iwqfly4tjmw" path="res://scenes/elements/pipes_manager.tscn" id="6_b5yu3"]
[ext_resource type="PackedScene" uid="uid://dpdrvmamgu0eg" path="res://scenes/ui/game_over_scene.tscn" id="7_jpunb"]
[ext_resource type="PackedScene" uid="uid://bwwpepovp64f4" path="res://scenes/ui/ranking_scene.tscn" id="8_he2gj"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_67vrm"]
load_path = "res://.godot/imported/sky_background.png-46c1f5a2bc74c7a3c9e6d65ba010d37a.ctex"

[sub_resource type="Theme" id="Theme_vb7me"]
default_font = ExtResource("4_kct05")
default_font_size = 35

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jv78b"]
distance = 5.0

[node name="GameScene" type="Node2D"]
script = ExtResource("1_jw6sh")

[node name="SkyBackground" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4779.0
offset_bottom = 1920.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1081, 977)
size_flags_horizontal = 4
texture = SubResource("CompressedTexture2D_67vrm")

[node name="CloudScene" parent="." instance=ExtResource("2_80ei6")]

[node name="BirdScene" parent="." instance=ExtResource("3_e3ykb")]
position = Vector2(232, 955)

[node name="ScoreLabel" type="Label" parent="."]
top_level = true
offset_left = 73.0
offset_top = 82.0
offset_right = 195.0
offset_bottom = 228.0
pivot_offset = Vector2(59, 76)
theme = SubResource("Theme_vb7me")
theme_override_colors/font_color = Color(0.772549, 0.866667, 0, 1)
theme_override_colors/font_shadow_color = Color(0.0313726, 0.0196078, 0.0352941, 1)
theme_override_colors/font_outline_color = Color(0.818412, 0.674562, 0.409966, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 25
theme_override_font_sizes/font_size = 106
text = "10"

[node name="TransitionScene" parent="." instance=ExtResource("5_1leyw")]
visible = false
top_level = true

[node name="PipesManager" parent="." instance=ExtResource("6_b5yu3")]

[node name="GameOverScene" parent="." instance=ExtResource("7_jpunb")]
offset_left = 1629.0
offset_right = 1629.0

[node name="AddYourNameControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3041.0
offset_top = 150.0
offset_right = 4121.0
offset_bottom = 2070.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RankingScene" parent="AddYourNameControl" instance=ExtResource("8_he2gj")]
layout_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(540.125, 960)
position_smoothing_enabled = true

[node name="WorldBoundary" type="StaticBody2D" parent="."]
collision_layer = 16

[node name="TopWorldBoundary" type="CollisionShape2D" parent="WorldBoundary"]
position = Vector2(508, -93)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_jv78b")

[node name="BottomWorldBoundary" type="CollisionShape2D" parent="WorldBoundary"]
position = Vector2(574, 1992)
shape = SubResource("WorldBoundaryShape2D_jv78b")

[connection signal="bird_is_dead" from="BirdScene" to="." method="_on_bird_scene_bird_is_dead"]
[connection signal="ranked_pressed" from="GameOverScene" to="." method="_on_game_over_scene_ranked_pressed"]
[connection signal="close_pressed" from="AddYourNameControl/RankingScene" to="." method="_on_ranking_scene_close_pressed"]
